--- a/LibGit2Sharp/LibGit2Sharp.csproj
+++ b/LibGit2Sharp/LibGit2Sharp.csproj
@@ -44,9 +44,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AfterRebaseStepInfo.cs" />
     <Compile Include="AmbiguousSpecificationException.cs" />
     <Compile Include="ArchiverBase.cs" />
     <Compile Include="BareRepositoryException.cs" />
+    <Compile Include="BeforeRebaseStepInfo.cs" />
     <Compile Include="BlameHunkCollection.cs" />
     <Compile Include="BlameHunk.cs" />
     <Compile Include="BlameOptions.cs" />
@@ -74,6 +76,9 @@
     <Compile Include="Core\GitPushUpdate.cs" />
     <Compile Include="Core\Platform.cs" />
     <Compile Include="Core\Handles\ConflictIteratorSafeHandle.cs" />
+    <Compile Include="Core\GitRebaseOperation.cs" />
+    <Compile Include="Core\GitRebaseOptions.cs" />
+    <Compile Include="Core\Handles\RebaseSafeHandle.cs" />
     <Compile Include="DescribeOptions.cs" />
     <Compile Include="DescribeStrategy.cs" />
     <Compile Include="Core\GitDescribeFormatOptions.cs" />
@@ -122,6 +127,11 @@
     <Compile Include="PeelException.cs" />
     <Compile Include="PullOptions.cs" />
     <Compile Include="RecurseSubmodulesException.cs" />
+    <Compile Include="RebaseOperationImpl.cs" />
+    <Compile Include="RebaseOptions.cs" />
+    <Compile Include="RebaseResult.cs" />
+    <Compile Include="Rebase.cs" />
+    <Compile Include="RebaseStepInfo.cs" />
     <Compile Include="RefSpec.cs" />
     <Compile Include="RefSpecCollection.cs" />
     <Compile Include="Core\EncodingMarshaler.cs" />
